#116; Finished Close options; see Changelist

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -269,7 +269,9 @@ Libraries.this.will.overwrite.any.existing.uuid=<html><body><b><i>Warning:</i></
 Libraries.to.multi.libraries=To {0} libraries?
 Libraries.toggle.all=\ Toggle all
 Libraries.undo=Undo
-Main.disconnecting.and.shutting.down=Disconnecting and shutting down
+Main.disconnecting=Disconnecting
+Main.disconnecting.stty=Disconnecting stty
+Main.disconnecting.status.server=Disconnecting Hint Status Server
 MainFrame.cancelling.transfers.as.requested=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 MainFrame.unsaved.changes.are.you.sure=There are unsaved changes. Are you sure you want to quit?
@@ -985,7 +987,7 @@ Updater.unpacking=unpacking:
 Updater.update.info.not.found.0.using.coded.url.1=update.info not found: {0}, using coded URL: {1}
 Updater.update.url=update URL: 
 Z.are.you.sure.you.want.to.close=Are you sure you want to close\ 
-Z.are.you.sure.you.want.to.quit.and.close=Are you sure you want to quit the Hint Status Server and close\ 
+Z.are.you.sure.you.want.to.quit.and.close=Are you sure you want to quit Hint Tracker/Server and close\ 
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.are.you.sure=Are you sure?
 Z.cancel.all.changes=Cancel all changes?
@@ -1017,6 +1019,7 @@ Z.exception=Exception\:
 Z.fault=Fault\: 
 Z.hint.key=Hint Keys
 Z.hint.tracker=Hint Tracker
+Z.hint.server=Hint Status Server
 Z.invalid.selection=Invalid selection\: 
 Z.local.lowercase=local
 Z.local.uppercase=Local 
