#116; Fixed Open & Close options; Other tweaks, see deploy/changes.html

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -495,7 +495,7 @@ Navigator.menu.Open.subscriber.connection.checkbox.tooltip=Be sure an ELS Subscr
 Navigator.menu.Open.subscriber.connection.checkbox=&nbsp;&nbsp;Remote<br/>Connection&nbsp;&nbsp;
 Navigator.menu.Open.subscriber.error.opening.subscriber.library=Error opening subscriber library: 
 Navigator.menu.Open.subscriber.files=ELS Library files (*.json)
-Navigator.menu.Open.subscriber.please.open.a.publisher.library.first=Please open a Publisher Library first
+Navigator.menu.Open.a.publisher.library.required=A Publisher Library is required for Remote connections
 Navigator.menu.Open.subscriber.remote.subscriber.failed.to.connect=Remote subscriber failed to connect
 Navigator.menu.Open.subscriber.subscriber.sftp.failed.to.connect=Subscriber sftp failed to connect
 Navigator.menu.Open.subscriber=Open ELS Subscriber
@@ -1025,6 +1025,7 @@ Z.local.lowercase=local
 Z.local.uppercase=Local 
 Z.no=No
 Z.not.found=\ not found
+Z.not.implemented.yet=Not implemented yet
 Z.ok=Ok
 Z.open=Open
 Z.please.rename.the.existing=Please rename the existing 
@@ -1055,3 +1056,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Navigator.a.tool.is.active=A tool is active
