--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -1056,4 +1056,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Navigator.a.tool.is.active=A tool is active
+Navigator.a.tool.is.active=Another tool is active
