--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -244,16 +244,17 @@ Libraries.minimum.free.space=Minimum Free Space
 Libraries.mode.select.type=Select type:
 Libraries.nothing.to.undo=Nothing to undo
 Libraries.please.select.a.single.source.to.move=Please select a single Source to move
-Libraries.remove.library.from=Remove library {0} from {1}?
-Libraries.remove.locations.from=Remove {0} locations from {1}?
-Libraries.remove.sources.from.library=Remove {0} sources from {1} library {2}?
+Libraries.remove.library.from=Remove Library {0} from {1}?
+Libraries.remove.locations.from=Remove {0} Locations from {1}?
+Libraries.remove.sources.from.library=Remove {0} Sources from {1} library {2}?
 Libraries.save.toolTip.text=Save all changes
-Libraries.select.base.path.of.new.location=Select base path of new Location:
-Libraries.select.location=Select location
+Libraries.select.path.of.new.location=Select path of new Location:
+Libraries.select.location=Select Location
 Libraries.select.new.location=Select new Location
-Libraries.select.new.source.base.path=Select new source base path
-Libraries.select.new.source.path=Select new source path
-Libraries.select.source.base.path=Select source base path
+Libraries.select.new.source.base.path=Select new Source base path
+Libraries.select.source.base.path=Select Source base path
+Libraries.select.new.source=Select path of new Source:
+Libraries.select.new.source.path=Select new Source path
 Libraries.sources.multiple=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different than Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source:</html></body>
 Libraries.targets=Targets
 Libraries.temp.location=Temporary Files Directory
@@ -263,7 +264,7 @@ Libraries.textFieldListen.toolTipText=For remote Navigators and Publishers. The\
 Libraries.textFieldTempLocation.toolTipText=Directory for temporary file
 Libraries.textFieldTimeout.toolTipText=Time-out period. Useful when waiting\nfor a remote system to scan collection
 Libraries.that.library.already.exists=That library already exists
-Libraries.that.location.is.already.defined=That Location is already defined
+Libraries.that.directory.is.already.defined=That directory is already defined
 Libraries.that.source.is.already.defined=That Source is already defined
 Libraries.this.will.overwrite.any.existing.uuid=<html><body><b><i>Warning:</i></b> Overwrites the existing UUID.</body></html>
 Libraries.to.multi.libraries=To {0} libraries?
@@ -1057,3 +1058,8 @@ Z.would.rename=Would rename:
 Z.yes=Yes
 jobs.displayName=Job
 Navigator.a.tool.is.active=Another tool is active
+Libraries.browser.button.title=Browser ...
+Libraries.use.browser.selection=Use Browser selection
+Libraries.use.selected.item=Use selected {0} directory?
+Libraries.please.select.a.single.directory.to.add=Please select a single real directory to add
+Libraries.nothing.selected.in.browser=Nothing selected in Browser
