--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -221,10 +221,8 @@ Libraries.add.ignore.1=Enter a regular expression pattern.
 Libraries.add.ignore.2=Note: Embedded regex characters must
 Libraries.add.ignore.3=be escaped with a backslash \\.
 Libraries.add.ignore.4=See Libraries Help for details.
-Libraries.add.multi.library.name=Add {0}{1}<library name>
-Libraries.add.new.source.to.libraries=Add new Source to libraries:
 Libraries.are.you.sure.remove.ignores=Are you sure you want to delete {0} ignore patterns?
-Libraries.buttonLibrarySelectTempLocation.toolTipText=Select Temporary Files Location
+Libraries.browser.button.title=Browser ...
 Libraries.cancel.toolTip.text=Cancel all changes
 Libraries.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
 Libraries.checkBoxTempDated.toolTipText=Add dates to temporary files
@@ -242,20 +240,27 @@ Libraries.location=Location
 Libraries.minimum.free.space.for.location=Minimum free space for Location:
 Libraries.minimum.free.space=Minimum Free Space
 Libraries.mode.select.type=Select type:
+Libraries.nothing.selected.in.browser=Nothing selected in Browser
 Libraries.nothing.to.undo=Nothing to undo
+Libraries.please.select.a.single.directory.to.add=Please select a single real directory to add
 Libraries.please.select.a.single.source.to.move=Please select a single Source to move
 Libraries.remove.library.from=Remove Library {0} from {1}?
 Libraries.remove.locations.from=Remove {0} Locations from {1}?
 Libraries.remove.sources.from.library=Remove {0} Sources from {1} library {2}?
 Libraries.save.toolTip.text=Save all changes
-Libraries.select.path.of.new.location=Select path of new Location:
 Libraries.select.location=Select Location
-Libraries.select.new.location=Select new Location
+Libraries.select.new.location.path=Select new Location path
+Libraries.select.new.location=Select path of new Location:
+Libraries.select.new.multiple.already.defined=<html><body>Path {0}<p>is already defined for library {1}</body></html>
+Libraries.select.new.multiple.source.path=Select Source base path
+Libraries.select.new.multiple.source.to.libraries=Add new Source to libraries:
+Libraries.select.new.multiple.source=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different from Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source:</html></body>
 Libraries.select.new.source.base.path=Select new Source base path
-Libraries.select.source.base.path=Select Source base path
-Libraries.select.new.source=Select path of new Source:
 Libraries.select.new.source.path=Select new Source path
-Libraries.sources.multiple=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different than Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source:</html></body>
+Libraries.select.new.source=Select path of new Source:
+Libraries.selected.path.is.not.from.repository.continue=<html><body>The selected path is not from repository {0}.<p>Continue?</body></html>
+Libraries.select.temp.location.path=Select Temporary Files Location
+Libraries.select.temp.location=Select path for temporary files:
 Libraries.targets=Targets
 Libraries.temp.location=Temporary Files Directory
 Libraries.textFieldHost.toolTipText=For remote Navigators and Publishers. The\n"outside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  fuzzywuzzybear.com\:50271
@@ -264,15 +269,16 @@ Libraries.textFieldListen.toolTipText=For remote Navigators and Publishers. The\
 Libraries.textFieldTempLocation.toolTipText=Directory for temporary file
 Libraries.textFieldTimeout.toolTipText=Time-out period. Useful when waiting\nfor a remote system to scan collection
 Libraries.that.library.already.exists=That library already exists
-Libraries.that.directory.is.already.defined=That directory is already defined
+Libraries.that.location.is.already.defined=That Location is already defined
 Libraries.that.source.is.already.defined=That Source is already defined
 Libraries.this.will.overwrite.any.existing.uuid=<html><body><b><i>Warning:</i></b> Overwrites the existing UUID.</body></html>
-Libraries.to.multi.libraries=To {0} libraries?
 Libraries.toggle.all=\ Toggle all
 Libraries.undo=Undo
-Main.disconnecting=Disconnecting
-Main.disconnecting.stty=Disconnecting stty
+Libraries.use.browser.selection=Use Browser selection
+Libraries.use.selected.item=Use selected {0} directory?
 Main.disconnecting.status.server=Disconnecting Hint Status Server
+Main.disconnecting.stty=Disconnecting stty
+Main.disconnecting=Disconnecting
 MainFrame.cancelling.transfers.as.requested=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 MainFrame.unsaved.changes.are.you.sure=There are unsaved changes. Are you sure you want to quit?
@@ -333,6 +339,7 @@ NavTreeNode.sources=\ sources
 NavTreeNode.swing.worker.fault.during.get.of=Swing worker fault during get of 
 NavTreeNode.system=System
 NavTreeNode.unknown=Unknown
+Navigator.a.tool.is.active=Another tool is active
 Navigator.bibliographyTab.tab.mnemonic_2=Y
 Navigator.bibliographyTab.tab.title=Bibliography
 Navigator.button.Back.toolTipText=Back (Alt-Left)
@@ -415,7 +422,7 @@ Navigator.labelListen.text=Listen\:
 Navigator.labelSources.text=Sources
 Navigator.labelTempDated.text=Temporary files dated\:
 Navigator.labelTempLocation.text=Temporary files location\:
-Navigator.labelTerminalAllosed.text=Terminal allowed\:
+Navigator.labelTerminal.Allowed.text=Terminal allowed\:
 Navigator.labelTimeout.text=Time-out (minutes)\:
 Navigator.libraries=\ libraries
 Navigator.locationsTab.tab.mnemonic=L
@@ -474,6 +481,7 @@ Navigator.menu.New.folder.mnemonic=N
 Navigator.menu.New.folder.please.select.a.single.destination.for.a.new.folder=Please select a single destination for a new folder
 Navigator.menu.New.folder.select.library.source=Select 1 of the {0} sources for library {1}:
 Navigator.menu.New.folder.text=New Folder ...
+Navigator.menu.Open.a.publisher.library.required=A Publisher Library is required for Remote connections
 Navigator.menu.Open.hint.keys.error.opening.hint.keys=Error opening hint keys: 
 Navigator.menu.Open.hint.keys.files=ELS Hint Keys (*.keys)
 Navigator.menu.Open.hint.keys=Open ELS Hint Keys
@@ -496,7 +504,6 @@ Navigator.menu.Open.subscriber.connection.checkbox.tooltip=Be sure an ELS Subscr
 Navigator.menu.Open.subscriber.connection.checkbox=&nbsp;&nbsp;Remote<br/>Connection&nbsp;&nbsp;
 Navigator.menu.Open.subscriber.error.opening.subscriber.library=Error opening subscriber library: 
 Navigator.menu.Open.subscriber.files=ELS Library files (*.json)
-Navigator.menu.Open.a.publisher.library.required=A Publisher Library is required for Remote connections
 Navigator.menu.Open.subscriber.remote.subscriber.failed.to.connect=Remote subscriber failed to connect
 Navigator.menu.Open.subscriber.subscriber.sftp.failed.to.connect=Subscriber sftp failed to connect
 Navigator.menu.Open.subscriber=Open ELS Subscriber
@@ -551,17 +558,6 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
-Navigator.menuItemCloseHintTracking.displayedMnemonicIndex=5
-Navigator.menuItemCloseHintTracking.mnemonic=T
-Navigator.menuItemCloseHintTracking.text=Hint Tracking ...
-Navigator.menuItemCloseHintKeys.mnemonic=K
-Navigator.menuItemCloseHintKeys.text=Hint Keys ...
-Navigator.menuItemCloseSubscriber.mnemonic=S
-Navigator.menuItemCloseSubscriber.text=Subscriber ...
-Navigator.menuItemClose.mnemonic=C
-Navigator.menuItemClose.text=Close
-Navigator.menuItemClosePublisher.mnemonic=P
-Navigator.menuItemClosePublisher.text=Publisher ...
 Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemAutoRefresh.mnemonic=A
@@ -570,6 +566,17 @@ Navigator.menuItemBlacklist.mnemonic=B
 Navigator.menuItemBlacklist.text=Blacklist ...
 Navigator.menuItemChangelist.mnemonic=L
 Navigator.menuItemChangelist.text=Changelist ...
+Navigator.menuItemClose.mnemonic=C
+Navigator.menuItemClose.text=Close
+Navigator.menuItemCloseHintKeys.mnemonic=K
+Navigator.menuItemCloseHintKeys.text=Hint Keys ...
+Navigator.menuItemCloseHintTracking.displayedMnemonicIndex=5
+Navigator.menuItemCloseHintTracking.mnemonic=T
+Navigator.menuItemCloseHintTracking.text=Hint Tracking ...
+Navigator.menuItemClosePublisher.mnemonic=P
+Navigator.menuItemClosePublisher.text=Publisher ...
+Navigator.menuItemCloseSubscriber.mnemonic=S
+Navigator.menuItemCloseSubscriber.text=Subscriber ...
 Navigator.menuItemEmptyFinder.mnemonic=E
 Navigator.menuItemEmptyFinder.text=Empty Directory Finder ...
 Navigator.menuItemExternalTools.displayedMnemonicIndex=9
@@ -973,7 +980,7 @@ Updater.bytes.read.and.bytes.decompressed=Bytes read: {0} and bytes decompressed
 Updater.commandline=commandLine: 
 Updater.download.and.unpack.of.els.successful=download and unpack of ELS successful
 Updater.downloading=downloading: 
-Updater.installedpath=installedPath: 
+Updater.installed.path=installedPath: 
 Updater.missing.or.malformed.update.info.cannot.continue=Missing or malformed update.info, cannot continue: 
 Updater.missing.or.malformed.updater.info.parameters.cannot.continue=Missing or malformed updater.info parameters, cannot continue: 
 Updater.missing.or.malformed.version.info.file.cannot.continue=Missing or malformed version.info file, cannot continue: 
@@ -988,8 +995,8 @@ Updater.unpacking=unpacking:
 Updater.update.info.not.found.0.using.coded.url.1=update.info not found: {0}, using coded URL: {1}
 Updater.update.url=update URL: 
 Z.are.you.sure.you.want.to.close=Are you sure you want to close\ 
-Z.are.you.sure.you.want.to.quit.and.close=Are you sure you want to quit Hint Tracker/Server and close\ 
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
+Z.are.you.sure.you.want.to.quit.and.close=Are you sure you want to quit Hint Tracker/Server and close\ 
 Z.are.you.sure=Are you sure?
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes.toolTipText=Discard all changes
@@ -1009,6 +1016,7 @@ Z.delete=Delete
 Z.deleted=Deleted: 
 Z.done.toolTipText=Close this dialog
 Z.done=Done
+Z.dont.ask.again=Don't ask again
 Z.downloading=Downloading
 Z.dry.run=\ (dry-run)
 Z.error.downloading=Error downloading:\ 
@@ -1019,8 +1027,8 @@ Z.error=Error
 Z.exception=Exception\: 
 Z.fault=Fault\: 
 Z.hint.key=Hint Keys
-Z.hint.tracker=Hint Tracker
 Z.hint.server=Hint Status Server
+Z.hint.tracker=Hint Tracker
 Z.invalid.selection=Invalid selection\: 
 Z.local.lowercase=local
 Z.local.uppercase=Local 
@@ -1057,9 +1065,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Navigator.a.tool.is.active=Another tool is active
-Libraries.browser.button.title=Browser ...
-Libraries.use.browser.selection=Use Browser selection
-Libraries.use.selected.item=Use selected {0} directory?
-Libraries.please.select.a.single.directory.to.add=Please select a single real directory to add
-Libraries.nothing.selected.in.browser=Nothing selected in Browser
