--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -116,7 +116,7 @@ Generator.generated=Generate command for\:
 Generator.labelConsoleLogLevels.text=Log level, Console\: 
 Generator.labelDebugLogLevels.text=\ Debug\:
 Generator.labelLogFile.text=Log output file\:       
-Generator.launch.els=Launch ELS 
+Generator.launch.els=Launch 
 Generator.name.required=Short name is required
 Generator.open.log.file=Log Output File
 Generator.select.log.button.mnemonic=l
@@ -250,17 +250,17 @@ Libraries.remove.sources.from.library=Remove {0} Sources from {1} library {2}?
 Libraries.save.toolTip.text=Save all changes
 Libraries.select.location=Select Location
 Libraries.select.new.location.path=Select new Location path
-Libraries.select.new.location=Select path of new Location:
+Libraries.select.new.location=Select path of new Location for
 Libraries.select.new.multiple.already.defined=<html><body>Path {0}<p>is already defined for library {1}</body></html>
 Libraries.select.new.multiple.source.path=Select Source base path
 Libraries.select.new.multiple.source.to.libraries=Add new Source to libraries:
-Libraries.select.new.multiple.source=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different from Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source:</html></body>
+Libraries.select.new.multiple.source=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different from Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source for: {0}</html></body>
 Libraries.select.new.source.base.path=Select new Source base path
 Libraries.select.new.source.path=Select new Source path
-Libraries.select.new.source=Select path of new Source:
-Libraries.selected.path.is.not.from.repository.continue=<html><body>The selected path is not from repository {0}.<p>Continue?</body></html>
+Libraries.select.new.source=Select path of new Source for
 Libraries.select.temp.location.path=Select Temporary Files Location
-Libraries.select.temp.location=Select path for temporary files:
+Libraries.select.temp.location=Select path for temporary files for
+Libraries.selected.path.is.not.from.repository.continue=<html><body>The selected path is not from repository {0}.<p>Continue?</body></html>
 Libraries.targets=Targets
 Libraries.temp.location=Temporary Files Directory
 Libraries.textFieldHost.toolTipText=For remote Navigators and Publishers. The\n"outside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  fuzzywuzzybear.com\:50271
@@ -558,6 +558,8 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemGenerate.mnemonic=G
+Navigator.menuItemGenerate.text=Generate ...
 Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemAutoRefresh.mnemonic=A
@@ -1065,3 +1067,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Navigator.preferences.saved=Preferences saved
