--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -254,7 +254,7 @@ Libraries.select.new.location=Select path of new Location for
 Libraries.select.new.multiple.already.defined=<html><body>Path {0}<p>is already defined for library {1}</body></html>
 Libraries.select.new.multiple.source.path=Select Source base path
 Libraries.select.new.multiple.source.to.libraries=Add new Source to libraries:
-Libraries.select.new.multiple.source=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different from Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source for: {0}</html></body>
+Libraries.select.new.multiple.source=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different from Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source for: <b>{0}</b></html></body>
 Libraries.select.new.source.base.path=Select new Source base path
 Libraries.select.new.source.path=Select new Source path
 Libraries.select.new.source=Select path of new Source for
@@ -457,8 +457,11 @@ Navigator.menu.File.mnemonic=F
 Navigator.menu.File.text=File
 Navigator.menu.Find.mnemonic=F
 Navigator.menu.Find.text=Find in Log ...
-Navigator.menu.GitHubProject.mnemonic=G
-Navigator.menu.GitHubProject.text=GitHub project
+Navigator.menuItemIssue.displayedMnemonicIndex=7
+Navigator.menuItemIssue.mnemonic=I
+Navigator.menuItemIssue.text=Submit Issue
+Navigator.menuItemGitHubProject.mnemonic=P
+Navigator.menu.GitHubProject.text=GitHub Project
 Navigator.menu.Help.mnemonic=H
 Navigator.menu.Help.text=Help
 Navigator.menu.Jobs.mnemonic=J
@@ -558,6 +561,12 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemDiscussions.mnemonic=S
+Navigator.menuItemDiscussions.text=Discussions
+Navigator.menuItemDocumentation2.mnemonic=D
+Navigator.menuItemDocumentation2.mnemonic_2=D
+Navigator.menuItemDocumentation2.text=Documentation
+Navigator.menuItemDocumentation2.text_2=Documentation
 Navigator.menuItemGenerate.mnemonic=G
 Navigator.menuItemGenerate.text=Generate ...
 Navigator.menuItemAuthKeys.mnemonic=A
@@ -585,8 +594,8 @@ Navigator.menuItemExternalTools.displayedMnemonicIndex=9
 Navigator.menuItemExternalTools.mnemonic=T
 Navigator.menuItemFindNext.mnemonic=X
 Navigator.menuItemFindNext.text=Find Next
-Navigator.menuItemGettingStarted.mnemonic=S
-Navigator.menuItemGettingStarted.text=Getting Started
+Navigator.menuItemGettingStarted.mnemonic_2=G
+Navigator.menuItemGettingStarted.text=Getting Started ...
 Navigator.menuItemHintKeys.mnemonic=H
 Navigator.menuItemHintKeys.text=Hint Keys ...
 Navigator.menuItemOpenHintTracking.displayedMnemonicIndex=10
