#109 Fixed minor i18n bundle problem

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -646,6 +646,7 @@ Navigator.popupMenu.Touch.mnemonic=T
 Navigator.popupMenu.Touch.text=Touch Date/Time ...\ 
 Navigator.popupMenuItemFind.mnemonic=F
 Navigator.popupMenuItemFind.text=Find in Log ...
+Navigator.popupMenuItemFind.title=Find in Log
 Navigator.popupMenuItemFindNext.mnemonic=X
 Navigator.popupMenuItemFindNext.text=Find Next
 Navigator.popupMenuItemRefresh.mnemonic=F
