--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -393,7 +393,7 @@ Navigator.buttonRemoveSource.text=Remove ...
 Navigator.buttonRemoveSource.toolTipText=Delete one or more sources
 Navigator.buttonUpSource.toolTipText=Move source up
 Navigator.cancelButton.mnemonic_2=U
-Navigator.cannot.find.updater=Cannot find executable:\ 
+Navigator.cannot.find.updater=Cannot find updater executable:\ 
 Navigator.changes.help.title=Current Build Changelist
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
@@ -668,7 +668,7 @@ Navigator.splitPane.Browser.tab.mnemonic=R
 Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
-Navigator.starting.els.updater=Starting ELS Updater
+Navigator.starting.els.updater=Starting ELS Updater:\ 
 Navigator.textField.Location.toolTipText=Location
 Navigator.unpacking=Unpacking
 Navigator.update.available=An ELS update is available
@@ -1000,7 +1000,7 @@ Updater.renaming.backups.to.original=renaming backups to original
 Updater.renaming.original.for.backup=renaming original for backup
 Updater.title=ELS Updater
 Updater.unpacking=unpacking: 
-Updater.update.info.not.found.0.using.coded.url.1=update.info not found: {0}, using coded URL: {1}
+Updater.update.info.not.found.using.coded.url=update.info not found: {0}, using coded URL: {1}
 Updater.update.url=update URL: 
 Z.are.you.sure.you.want.to.close=Are you sure you want to close\ 
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
