#139 Fixes for timing and better fault handling

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -393,7 +393,7 @@ Navigator.buttonRemoveSource.text=Remove ...
 Navigator.buttonRemoveSource.toolTipText=Delete one or more sources
 Navigator.buttonUpSource.toolTipText=Move source up
 Navigator.cancelButton.mnemonic_2=U
-Navigator.cannot.find.updater=Cannot find updater executable:\ 
+Navigator.cannot.find.executable=Cannot find ELS executable:\ 
 Navigator.changes.help.title=Current Build Changelist
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
@@ -1074,3 +1074,6 @@ Z.would.rename=Would rename:
 Z.yes=Yes
 jobs.displayName=Job
 Operations.launching=Launching:\ 
+Updater.restarting.els=Restarting ELS: 
+Updater.mounting.update=Mounting update: 
+Updater.unmounting=Unmounting: 
