#139 More macOS-related timing changes; Still testing

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -680,6 +680,7 @@ Navigator.updated=update successful
 Navigator.version.info.missing.or.malformed=Missing or malformed version.info, cannot continue: {0}
 Navigator.workstation=Workstation
 Operations.displayName=Operations
+Operations.launching=Launching:\ 
 OperationsUI.are.you.sure.you.want.delete.entries=Are you sure you want to delete {0} entries?
 OperationsUI.buttonCopyOperation.mnemonic=C
 OperationsUI.buttonDeleteOperation.mnemonic=D
@@ -986,19 +987,19 @@ Transfer.would.rm.file=\  > Would rm file:
 Updater.action.cancelled=action cancelled
 Updater.bytes.read.and.bytes.decompressed=Bytes read: {0} and bytes decompressed: {1} do not match, archive corrupted on {2}
 Updater.commandline=commandLine: 
+Updater.copy=copy: 
 Updater.download.and.unpack.of.els.successful=download and unpack of ELS successful
 Updater.downloading=downloading: 
 Updater.installed.path=installedPath: 
-Updater.missing.or.malformed.update.info.cannot.continue=Missing or malformed update.info, cannot continue: 
-Updater.missing.or.malformed.updater.info.parameters.cannot.continue=Missing or malformed updater.info parameters, cannot continue: 
-Updater.missing.or.malformed.version.info.file.cannot.continue=Missing or malformed version.info file, cannot continue: 
+Updater.mounting.update=mounting update:\ 
 Updater.preferences=preferences: 
 Updater.removing.cancelled.directories=removing cancelled directories
 Updater.removing.failed.directories=removing failed directories
 Updater.removing.original.backups=removing original backups
 Updater.renaming.backups.to.original=renaming backups to original
 Updater.renaming.original.for.backup=renaming original for backup
-Updater.title=ELS Updater
+Updater.restarting.els=restarting ELS:\ 
+Updater.unmounting=unmounting:\ 
 Updater.unpacking=unpacking: 
 Updater.update.info.not.found.using.coded.url=update.info not found: {0}, using coded URL: {1}
 Updater.update.url=update URL: 
@@ -1073,7 +1074,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Operations.launching=Launching:\ 
-Updater.restarting.els=Restarting ELS: 
-Updater.mounting.update=Mounting update: 
-Updater.unmounting=Unmounting: 
