--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -915,28 +915,32 @@ Settings.button.dateInfo.text=Help
 Settings.date.format.help.title=Date Format Help
 Settings.date.format.not.valid=The date format is not valid
 Settings.dateFormatLabel.text=Date format\:
+Settings.defaultAccentButton.text=Default
+Settings.defaultAccentButton.toolTipText=Default accent color
 Settings.error.changing.look.n.feel=Error changing Look 'n Feel: 
 Settings.generalPanel.tab.mnemonic=G
 Settings.generalPanel.tab.title=General
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
 Settings.hideHiddenFilesLabel.text=Hide hidden files\:
-Settings.librariesPanel.tab.mnemonic=L
-Settings.librariesPanel.tab.title=Libraries
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
-Settings.operationsPanel.tab.mnemonic=O
-Settings.operationsPanel.tab.title=Operations
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
 Settings.scaleCheckBox.toolTipText=Uncheck for decimal (1000 K) scale
 Settings.scaleLabel.text=Binary (1024 K) scale\:
+Settings.showArrowseLabel.text=Show up/down arrows\:
+Settings.showMnemonicsLabel.text=Show mnemonics\:
 Settings.select.accent.color=Select Accent Color
 Settings.showCcpConfirmationLabel.text=Confirm copy/cut/paste\:
+Settings.showDefaultLogOverwriteLabel.text=Default log overwrite\:
 Settings.showDeleteConfirmationLabel.text=Confirm delete\:
 Settings.showDndConfirmationLabel.text=Confirm drag 'n drop\:
 Settings.showTouchConfirmationLabel.text=Confirm touch\:
+Settings.default.dry.runLabel.text=Default dry-run\:
 Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
+Settings.uselastPubSubCheckBox.toolTipText=Use the previous publisher and/or subscriber if not specified
+Settings.useLastPubSubLabel.text=Use last publisher/subscriber\:
 Settings.tabPlacement.bottom=Bottom
 Settings.tabPlacement.left=Left
 Settings.tabPlacement.right=Right
