--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -556,6 +556,8 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemWebSite.mnemonic=W
+Navigator.menuItemWebSite.text=Web Site
 Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemAutoRefresh.mnemonic=A
@@ -931,7 +933,6 @@ Settings.showArrowseLabel.text=Show up/down arrows\:
 Settings.showMnemonicsLabel.text=Show mnemonics\:
 Settings.select.accent.color=Select Accent Color
 Settings.showCcpConfirmationLabel.text=Confirm copy/cut/paste\:
-Settings.showDefaultLogOverwriteLabel.text=Default log overwrite\:
 Settings.showDeleteConfirmationLabel.text=Confirm delete\:
 Settings.showDndConfirmationLabel.text=Confirm drag 'n drop\:
 Settings.showTouchConfirmationLabel.text=Confirm touch\:
