--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -409,7 +409,8 @@ Navigator.generalTab.tab.mnemonic=G
 Navigator.generalTab.tab.title=General
 Navigator.getting.started=Getting Started
 Navigator.initialized=Initialized Navigator
-Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><p>Installed: <b>{0}</b></p><p>&nbsp;&nbsp;Update: <b>{1}</b></p><p>&nbsp;</p><p>Update and restart?</p></body></html>
+Navigator.install.update.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><p>Installed: <b>{0}</b></p><p>&nbsp;&nbsp;Update: <b>{1}</b></p><p>&nbsp;</p><p>Update and restart?</p></body></html>
+Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><p>Installed: <b>{0}</b></p><p>&nbsp;&nbsp;Update: <b>{1}</b></p><p>&nbsp;</p></body></html>
 Navigator.installed.up.to.date=ELS is up-to-date
 Navigator.labelCase.text=Case-sensitive\:
 Navigator.labelFlavor.text=Flavor\:
@@ -1040,6 +1041,7 @@ Z.error.writing=Error writing\:
 Z.error=Error 
 Z.exception=Exception\: 
 Z.fault=Fault\: 
+Z.goto.website=ELS website
 Z.hint.key=Hint Keys
 Z.hint.server=Hint Status Server
 Z.hint.tracker=Hint Tracker
@@ -1079,4 +1081,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Updater.application.path.not.writable=Application path not writable. Please install ELS to Applications to update it.
+Updater.application.path.not.writable=Installation path not writable. Please install ELS to a writable location to update it.
